--- a/example/css/main.css
+++ b/example/css/main.css
@@ -1,9 +1,15 @@
 @CHARSET "UTF-8";
 
-#wrapper {width:760px; margin:20px auto;}
+#wrapper {width:960px; margin:20px auto;}
 
 #main form {margin:20px 0; border:1px solid #000; padding:20px;}
 #main fieldset {margin:20px 0; border:1px solid #666; padding:20px;}
 #main form .form-element {margin:10px 0; border:1px solid #ccc; padding:10px;}
 
 #main form .form-error *{color:#F00;}
+#main form .message {background-color:#FCC; bordeR:2px solid red; padding:10px 30px;}
+
+#main form .variables {float:left; width:28%; border:1px solid red;}
+
+#main form .submit-button {clear:both;}
+#main form .submit-button input {width:100%; height:100px;}
