--- a/example/css/main.css
+++ b/example/css/main.css
@@ -1,15 +1,39 @@
 @CHARSET "UTF-8";
+/*
+body {
+    background-image: -moz-radial-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
+    width: 100%;
+    border:1px solid red;
+}
+body{width:100%;background-image:-webkit-gradient(radial,center 25%,300,center 25%,750,from(rgba(255,255,255,0.5)),to(rgba(255,255,255,0)));background-image:-webkit-radial-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0));background-image:-moz-radial-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0));background-image:-ms-radial-gradient(center 25%,circle closest-side,rgba(255,255,255,0.5) 300px,rgba(255,255,255,0) 750px);background-image:-o-radial-gradient(center 25%,circle closest-side,rgba(255,255,255,0.5) 300px,rgba(255,255,255,0) 750px);background-image:radial-gradient(center 25%,circle closest-side,rgba(255,255,255,0.5) 300px,rgba(255,255,255,0) 750px);}
+*/
+body{
+background-image: linear-gradient(bottom, #CCCCCC 0%, #1F1F1F 52%);
+background-image: -o-linear-gradient(bottom, #CCCCCC 0%, #1F1F1F 52%);
+background-image: -moz-linear-gradient(bottom, #CCCCCC 0%, #1F1F1F 52%);
+background-image: -webkit-linear-gradient(bottom, #CCCCCC 0%, #1F1F1F 52%);
+background-image: -ms-linear-gradient(bottom, #CCCCCC 0%, #1F1F1F 52%);
+
+background-image: -webkit-gradient(
+  linear,
+  left bottom,
+  left top,
+  color-stop(0, #CCCCCC),
+  color-stop(0.52, #1F1F1F)
+);
+}
 
 #wrapper {width:960px; margin:20px auto;}
 
-#main form {margin:20px 0; border:1px solid #000; padding:20px;}
-#main fieldset {margin:20px 0; border:1px solid #666; padding:20px;}
+#main {background-color:#eee;}
+#main form {margin:20px 0;  padding:20px; }
+#main fieldset {margin:20px 0; border:1px solid #999; padding:20px;}
 #main form .form-element {margin:10px 0; border:1px solid #ccc; padding:10px;}
 
 #main form .form-error *{color:#F00;}
-#main form .message {background-color:#FCC; bordeR:2px solid red; padding:10px 30px;}
+#main form .message {background-color:#FCC; bordeR:2px solid #999; padding:10px 30px;}
 
-#main form .variables {float:left; width:28%; border:1px solid red;}
+#main form .variables {float:left; width:28%; border:1px solid #999;}
 
 #main form .submit-button {clear:both;}
 #main form .submit-button input {width:100%; height:100px;}
