--- a/example/css/main.css
+++ b/example/css/main.css
@@ -25,9 +25,11 @@ background-image: -webkit-gradient(
 
 #wrapper {width:960px; margin:20px auto;}
 
+h1 {color:#FFF;}
+
 #main {background-color:#eee;}
 #main form {margin:20px 0;  padding:20px; }
-#main fieldset {margin:20px 0; border:1px solid #999; padding:20px;}
+#main fieldset {margin:20px 0; /*border:1px solid #999;*/ padding:20px;}
 #main form .form-element {margin:10px 0; border:1px solid #ccc; padding:10px;}
 
 #main form .form-error *{color:#F00;}
@@ -37,3 +39,10 @@ background-image: -webkit-gradient(
 
 #main form .submit-button {clear:both;}
 #main form .submit-button input {width:100%; height:100px;}
+
+
+#calculator-type label {padding:20px; float:left; width:20%; background-color:#FA5400; border-right:2px solid #EA4E00;}
+#calculator-type input {display:none;}
+
+#distance-type label {padding:5px; background-color:#ccc; border-right:1px solid #999;}
+#distance-type input {display:none;}
